--- a/react/src/index.css
+++ b/react/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  background-color: greenyellow;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -41,4 +42,12 @@ code {
 
 .greenText{
   color: green;
+}
+
+h4 {
+  text-align: center;
+}
+
+img {
+  align-content: center;
 }
