--- a/react/src/index.css
+++ b/react/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  background-color: greenyellow;
+  background-color: rgb(10, 63, 3);
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -41,7 +41,7 @@ code {
 }
 
 .greenText{
-  color: green;
+  color: rgb(10, 63, 3);
 }
 
 h4 {
