navbar added and background

--- a/react/src/index.css
+++ b/react/src/index.css
@@ -51,3 +51,14 @@ h4 {
 img {
   align-content: center;
 }
+
+nav {
+  background-color: rgb(11, 75, 3);
+  padding: 2px;
+  margin: 2px;
+}
+
+.home__background {
+  background-image: linear-gradient(rgba(44, 199, 78, 0.7), rgba(28, 136, 131, 0.5)), url(./img/ss.JPG);
+  background-size: cover;
+}
